--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNy3FysoLt+hhWNM0JMANx+",
+      "authorship_tag": "ABX9TyNvBiuwUaZT8mkW6BzmMb7f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,19 +66,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ce3cc75f-c088-423a-8418-020ad4a0aa5a"
+        "outputId": "f1489f43-25a4-47d2-cc22-91e4c5c09fa1"
       },
       "source": [
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/bin/bash: elixir: command not found\n",
-            "Wed Jun  2 00:43:58 UTC 2021\n"
+            "Erlang/OTP 24 [erts-12.0.2] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
+            "\n",
+            "Elixir 1.12.0 (compiled with Erlang/OTP 24)\n",
+            "Fri Jun 11 21:52:49 UTC 2021\n"
           ],
           "name": "stdout"
         }
@@ -2320,15 +2322,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "waLVeKX3XBFK"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "2VGV7B-LtNR0"
       },
       "source": [
@@ -2339,30 +2332,157 @@
         "キーワードリストは最初の要素がアトムのタプルからなる特別なリストで、関数にオプションを渡すときに用いる。\n",
         "\n",
         "キーワードリストの特徴\n",
+        "* アトムである\n",
+        "* 順序づけされる\n",
+        "* 一意でなくてよい\n",
         "\n",
-        "マップの特徴\n"
+        "マップの特徴 \n",
+        "* キーワードリストとは違ってどんな型のキーも使える。\n",
+        "* 順序付けされない。\n",
+        "* キーの一意性が保証されている。重複したキーが追加された場合は、前の値が置き換えられる。\n",
+        "* 変数をマップのキーにできる。\n",
+        "* %{} 構文で定義する。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "waLVeKX3XBFK"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ol_6MTCA6GVr"
+        "id": "fEaB9W4BD3p6",
+        "outputId": "f0917b0c-7947-4977-bc01-b6e73d996335",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "# キーワードリスト\n",
+        "!elixir -e 'list=[{:a,1},{:b,2}];IO.inspect list'\n",
+        "!elixir -e 'list=[a: 1, b: 2];IO.inspect list' # 書くのはこっちが便利\n",
+        "!elixir -e 'list=[{:a,1},{:b,2}];IO.inspect list==[a: 1, b: 2]'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[a: 1, b: 2]\n",
+            "[a: 1, b: 2]\n",
+            "true\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9H-odexhEuvs",
+        "outputId": "8f55c684-0af3-4383-ae6a-efa714ca2dfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'list=[a: 1, b: 2];list=list++[c: 3];IO.inspect list'"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[a: 1, b: 2, c: 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VTXf-vAoF7Or",
+        "outputId": "c01b2b7a-19a7-4f3a-c2d0-4350cc8b4511",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'list=[a: 1, b: 2];list=list++[a: 3];IO.inspect list'"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[a: 1, b: 2, a: 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ol_6MTCA6GVr",
+        "outputId": "b0a691e2-5b24-415b-8541-2073f12a897b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'list=[a: 1, b: 2];list=[a: 0]++list;IO.inspect list'"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[a: 0, a: 1, b: 2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4XibpbhSGWnN",
+        "outputId": "dfc6c51c-7c45-4579-8458-674e2ede24ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir -e 'list=[a: 1, b: 2];list=[a: 0]++list;IO.inspect list[:a]'"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4gRIGbwjs4sW",
-        "outputId": "196ab5ed-9c99-4be7-e596-9c117cf7c213",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        }
+        },
+        "outputId": "196ab5ed-9c99-4be7-e596-9c117cf7c213"
       },
       "source": [
         "他の言語で、ディクショナリーとかハッシュあるいは連想配列などと呼ばれるデータと似た仕組みです。\n",
@@ -2559,7 +2679,7 @@
         "番外\n",
         "Elixir入門: Plugを使うには\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
