--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNvBiuwUaZT8mkW6BzmMb7f",
+      "authorship_tag": "ABX9TyO8uff37LXimswl0yipWvZz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2341,7 +2341,7 @@
         "* 順序付けされない。\n",
         "* キーの一意性が保証されている。重複したキーが追加された場合は、前の値が置き換えられる。\n",
         "* 変数をマップのキーにできる。\n",
-        "* %{} 構文で定義する。\n",
+        "* `%{}` 構文で定義する。\n",
         "\n"
       ]
     },
@@ -2357,11 +2357,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fEaB9W4BD3p6",
-        "outputId": "f0917b0c-7947-4977-bc01-b6e73d996335",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fEaB9W4BD3p6",
+        "outputId": "f0917b0c-7947-4977-bc01-b6e73d996335"
       },
       "source": [
         "# キーワードリスト\n",
@@ -2385,11 +2385,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9H-odexhEuvs",
-        "outputId": "8f55c684-0af3-4383-ae6a-efa714ca2dfd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9H-odexhEuvs",
+        "outputId": "8f55c684-0af3-4383-ae6a-efa714ca2dfd"
       },
       "source": [
         "!elixir -e 'list=[a: 1, b: 2];list=list++[c: 3];IO.inspect list'"
@@ -2408,11 +2408,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VTXf-vAoF7Or",
-        "outputId": "c01b2b7a-19a7-4f3a-c2d0-4350cc8b4511",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VTXf-vAoF7Or",
+        "outputId": "c01b2b7a-19a7-4f3a-c2d0-4350cc8b4511"
       },
       "source": [
         "!elixir -e 'list=[a: 1, b: 2];list=list++[a: 3];IO.inspect list'"
@@ -2432,10 +2432,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ol_6MTCA6GVr",
-        "outputId": "b0a691e2-5b24-415b-8541-2073f12a897b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b0a691e2-5b24-415b-8541-2073f12a897b"
       },
       "source": [
         "!elixir -e 'list=[a: 1, b: 2];list=[a: 0]++list;IO.inspect list'"
@@ -2454,11 +2454,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4XibpbhSGWnN",
-        "outputId": "dfc6c51c-7c45-4579-8458-674e2ede24ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4XibpbhSGWnN",
+        "outputId": "dfc6c51c-7c45-4579-8458-674e2ede24ee"
       },
       "source": [
         "!elixir -e 'list=[a: 1, b: 2];list=[a: 0]++list;IO.inspect list[:a]'"
@@ -2477,67 +2477,64 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4gRIGbwjs4sW",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        },
-        "outputId": "196ab5ed-9c99-4be7-e596-9c117cf7c213"
+        "id": "4gRIGbwjs4sW"
       },
       "source": [
-        "他の言語で、ディクショナリーとかハッシュあるいは連想配列などと呼ばれるデータと似た仕組みです。\n",
-        "\n",
-        "キーワードリスト\n",
-        "多くの関数型プログラミング言語では、キーと値のデータ構造をふたつの項目のタプルで表します。\n",
-        "Elixirでは、はじめの項目つまりキーにアトムが用いられた2項目のタプルのリストを、\n",
-        "キーワードリストと呼びます。キーワードリストは[キー: 値]の構文で書くと便利です。\n",
-        "データはタプルの基本構文[{キー: 値}]を用いた場合と変わりがありません。\n",
-        "iex> list = [{:a, 1}, {:b, 2}]\n",
-        "[a: 1, b: 2]\n",
-        "iex> list == [a: 1, b: 2]\n",
-        "true\n",
-        "キーワードリストはリストとして操作できます。たとえば、別のキーワードリストの要素を加えたいとき使うのは++/2演算子です。\n",
-        "iex> list ++ [c: 3]\n",
-        "[a: 1, b: 2, c: 3]\n",
-        "iex> [a: 0] ++ list\n",
-        "[a: 0, a: 1, b: 2]\n",
-        "リストに同じキーがあるとき、キーの参照は位置が前の要素を取り出します。\n",
-        "iex> new_list = [a: 0] ++ list\n",
-        "[a: 0, a: 1, b: 2]\n",
-        "iex> new_list[:a]\n",
-        "0\n",
-        "キーワードリストのキーにはつぎの3つの特徴があります。\n",
-        "\n",
-        "アトムである\n",
-        "順序づけされる\n",
-        "一意でなくてよい\n",
-        "たとえば、ElixirのライブラリEctoは、キーワードリストでデータベースクエリが書ける優れたDSLを提供しています。\n",
-        "query = from w in Weather,\n",
-        "      where: w.prcp > 0,\n",
-        "      where: w.temp < 20,\n",
-        "     select: w\n",
-        "Elixirでは、キーワードリストは関数にオプションを渡すときの標準の仕組みとなっています。\n",
-        "if/2マクロのつぎの構文はその例です(「Elixir入門 05: 条件 - case/cond/if」「do/endブロック」参照)。\n",
-        "iex> if(false, do: :this, else: :that)\n",
-        ":that\n",
-        ":doと:elseはひとつのキーワードリストの要素です。したがって、つぎのように書き替えられます。一般に、キーワードリストが関数の最後の引数のとき、角かっこ[]は省けるのです。\n",
-        "iex> if(false, [do: :this, else: :that])\n",
-        ":that\n",
-        "もちろん、つぎのようにも書けます。\n",
-        "iex> if(false, [{:do, :this}, {:else, :that}])\n",
-        ":that\n",
-        "キーワードリストにもパターンマッチングは使えます。けれど、要素の数とその順序までマッチしなければなりません。そのため、実際に用いられることは少ないでしょう。\n",
-        "iex> [a: a] = [a: 1]\n",
-        "[a: 1]\n",
-        "iex> a\n",
-        "1\n",
-        "iex> [a: a] = [a: 1, b: 2]\n",
-        "** (MatchError) no match of right hand side value: [a: 1, b: 2]\n",
-        "iex> [b: b, a: a] = [a: 1, b: 2]\n",
-        "** (MatchError) no match of right hand side value: [a: 1, b: 2]\n",
-        "キーワードリストを操作するために、ElixirにはKeywordモジュールが備わっています。ただ、ご注意いただきたいのは、キーワードリストはリストだということです。パフォーマンスについては、リストと同じ考慮が要ります。キーを探したり、要素を数えたりするのは、リストが長くなるほど時間がかかるということです。そのため、キーワードリストは、おもにオプションの値を渡すのに用いられます。多くの要素を納めたいときや、キーを一意にしたいときには、マップを使うのがよいでしょう。\n",
-        "\n",
+        "# Elixir のライブラリ Ecto は、キーワードリストでデータベースクエリが書ける DSL\n",
+        "# query = from w in Weather,\n",
+        "#       where: w.prcp > 0,\n",
+        "#       where: w.temp < 20,\n",
+        "#      select: w"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H5BrNCcHMnzs",
+        "outputId": "faafa7f2-8832-4d4c-d255-43b8ab74c304",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# if マクロの構文はキーワードリストを使っている\n",
+        "!elixir -e 'IO.inspect if(false, do: :this, else: :that)'\n",
+        "# キーワードリストが最後の引数の時、括弧を省けるのを利用している\n",
+        "!elixir -e 'IO.inspect if(false, [do: :this, else: :that])'\n",
+        "!elixir -e 'IO.inspect if(false, [{:do, :this}, {:else, :that}])'"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            ":that\n",
+            ":that\n",
+            ":that\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nmcbp3KBNQev"
+      },
+      "source": [
+        "キーワードリストでパターンマッチングをするためには、要素の数とその順序までマッチしなければならないので、実際に用いられることはない"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HQpVqe_eOVAi"
+      },
+      "source": [
         "マップ\n",
+        "\n",
         "Elixirでキーと値の組みを納めるデータ構造として、お勧めするのはマップです。マップは%{}/2の構文でつくります。\n",
         "iex> map = %{:a => 1, 2 => :b}\n",
         "%{2 => :b, :a => 1}\n",
@@ -2680,16 +2677,7 @@
         "Elixir入門: Plugを使うには\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-85017d2cfb39>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    Elixir入門 07: キーワードリストとマップ\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid token\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
