--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "elixir_gumi.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO8uff37LXimswl0yipWvZz",
+      "authorship_tag": "ABX9TyOpneF3ors3BjXSgUAKl6jh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +71,7 @@
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2369,7 +2368,7 @@
         "!elixir -e 'list=[a: 1, b: 2];IO.inspect list' # 書くのはこっちが便利\n",
         "!elixir -e 'list=[{:a,1},{:b,2}];IO.inspect list==[a: 1, b: 2]'"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2392,9 +2391,9 @@
         "outputId": "8f55c684-0af3-4383-ae6a-efa714ca2dfd"
       },
       "source": [
-        "!elixir -e 'list=[a: 1, b: 2];list=list++[c: 3];IO.inspect list'"
+        "!elixir -e 'list=[a: 1, b: 2];list=list++[c: 3];IO.inspect list' # リストなので `++` を使う"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2417,7 +2416,7 @@
       "source": [
         "!elixir -e 'list=[a: 1, b: 2];list=list++[a: 3];IO.inspect list'"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2440,7 +2439,7 @@
       "source": [
         "!elixir -e 'list=[a: 1, b: 2];list=[a: 0]++list;IO.inspect list'"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2463,7 +2462,7 @@
       "source": [
         "!elixir -e 'list=[a: 1, b: 2];list=[a: 0]++list;IO.inspect list[:a]'"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2493,19 +2492,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "H5BrNCcHMnzs",
-        "outputId": "faafa7f2-8832-4d4c-d255-43b8ab74c304",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "31942d20-c2a1-44eb-d0eb-623dc35f768e"
       },
       "source": [
         "# if マクロの構文はキーワードリストを使っている\n",
-        "!elixir -e 'IO.inspect if(false, do: :this, else: :that)'\n",
+        "!elixir -e 'IO.inspect if false, do: :this, else: :that'\n",
         "# キーワードリストが最後の引数の時、括弧を省けるのを利用している\n",
-        "!elixir -e 'IO.inspect if(false, [do: :this, else: :that])'\n",
-        "!elixir -e 'IO.inspect if(false, [{:do, :this}, {:else, :that}])'"
+        "!elixir -e 'IO.inspect if false, [do: :this, else: :that]'\n",
+        "!elixir -e 'IO.inspect if false, [{:do, :this}, {:else, :that}]'"
       ],
-      "execution_count": 19,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -2524,97 +2523,141 @@
         "id": "nmcbp3KBNQev"
       },
       "source": [
-        "キーワードリストでパターンマッチングをするためには、要素の数とその順序までマッチしなければならないので、実際に用いられることはない"
+        "キーワードリストでパターンマッチングをするためには、要素の数とその順序までマッチしなければならない。\n",
+        "\n",
+        "実際に用いられることはほとんどない。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HQpVqe_eOVAi"
+      },
+      "source": [
+        "---\n",
+        "**マップ**\n",
+        "\n",
+        "マップは `%{}` の構文でつくります。\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HQpVqe_eOVAi"
+        "id": "ZtvjDCA-q1ff",
+        "outputId": "e6f11e2a-5d3f-41f8-8e7b-0271daa005ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "マップ\n",
-        "\n",
-        "Elixirでキーと値の組みを納めるデータ構造として、お勧めするのはマップです。マップは%{}/2の構文でつくります。\n",
-        "iex> map = %{:a => 1, 2 => :b}\n",
+        "!elixir -e 'IO.inspect map = %{:a => 1, 2 => :b}' #=> %{2 => :b, :a => 1}\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "%{2 => :b, :a => 1}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tx72oY8ArXk4"
+      },
+      "source": [
         "%{2 => :b, :a => 1}\n",
-        "iex> map[:a]\n",
+        "!elixir -e 'IO.inspect map[:a]\n",
         "1\n",
-        "iex> map[2]\n",
+        "!elixir -e 'IO.inspect map[2]\n",
         ":b\n",
-        "iex> map[:c]\n",
+        "!elixir -e 'IO.inspect map[:c]\n",
         "nil\n",
         "リストと比べて、マップのキーにはつぎの特徴があります。\n",
         "\n",
         "どのようなデータ型でも使える\n",
-        "順序は問わない\n",
+        "順序は問わない\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NUDLsavSqw_v"
+      },
+      "source": [
+        "\n",
         "キーワードリストとは異なり、パターンマッチングはマップではとても有用です。\n",
         "マップのパターンは、サブセットとマッチします。つまり、\n",
         "パターンの中に含まれるキーさえマッチしていればよいのです。\n",
         "したがって、空のマップ%{}はすべてのマップにマッチします。\n",
-        "iex> %{} = %{:a => 1, 2 => :b}\n",
+        "!elixir -e 'IO.inspect %{} = %{:a => 1, 2 => :b}\n",
         "%{2 => :b, :a => 1}\n",
-        "iex> %{:a => a} = %{2 => :b, :a => 1}\n",
+        "!elixir -e 'IO.inspect %{:a => a} = %{2 => :b, :a => 1}\n",
         "%{2 => :b, :a => 1}\n",
-        "iex> a\n",
+        "!elixir -e 'IO.inspect a\n",
         "1\n",
-        "iex> %{:c => c} = %{:a => 1, 2 => :b}\n",
+        "!elixir -e 'IO.inspect %{:c => c} = %{:a => 1, 2 => :b}\n",
         "** (MatchError) no match of right hand side value: %{2 => :b, :a => 1}\n",
         "変数は参照やパターンマッチング、あるいはマップに加えるキーにも使えます。\n",
-        "iex> n = 1\n",
+        "!elixir -e 'IO.inspect n = 1\n",
         "1\n",
-        "iex> map = %{n => :one}\n",
+        "!elixir -e 'IO.inspect map = %{n => :one}\n",
         "%{1 => :one}\n",
-        "iex> map[n]\n",
+        "!elixir -e 'IO.inspect map[n]\n",
         ":one\n",
-        "iex> %{^n => :one} = %{1 => :one, 2 => :two, 3 => :three}\n",
+        "!elixir -e 'IO.inspect %{^n => :one} = %{1 => :one, 2 => :two, 3 => :three}\n",
         "%{1 => :one, 2 => :two, 3 => :three}\n",
         "モジュールMapには、Keywordと似た便利な関数が備わっています。つぎのコードは、関数Map.get/3(第3引数はデフォルトnil)とMap.put/3およびMap.to_list/1を使った例です。\n",
-        "iex> map = %{:a => 1, 2 => :b}\n",
+        "!elixir -e 'IO.inspect map = %{:a => 1, 2 => :b}\n",
         "%{2 => :b, :a => 1}\n",
-        "iex> Map.get(map, :a)\n",
+        "!elixir -e 'IO.inspect Map.get(map, :a)\n",
         "1\n",
-        "iex> Map.put(map, :c, 3)\n",
+        "!elixir -e 'IO.inspect Map.put(map, :c, 3)\n",
         "%{2 => :b, :a => 1, :c => 3}\n",
-        "iex> Map.to_list(map)\n",
+        "!elixir -e 'IO.inspect Map.to_list(map)\n",
         "[{2, :b}, {:a, 1}]\n",
         "マップのキーの値は、|を用いたつぎの構文で変えられます。ただし、キーはマップにすでに備わっていなければなりません。つまり、この構文で新たなキーは加えられないということです。\n",
-        "iex> map = %{:a => 1, 2 => :b}\n",
+        "!elixir -e 'IO.inspect map = %{:a => 1, 2 => :b}\n",
         "%{2 => :b, :a => 1}\n",
-        "iex> %{map | 2 => :two}\n",
+        "!elixir -e 'IO.inspect %{map | 2 => :two}\n",
         "%{2 => :two, :a => 1}\n",
-        "iex> %{map | :c => 3}\n",
+        "!elixir -e 'IO.inspect %{map | :c => 3}\n",
         "** (KeyError) key :c not found in: %{2 => :b, :a => 1}\n",
         "    (stdlib) :maps.update(:c, 3, %{2 => :b, :a => 1})\n",
         "    (stdlib) erl_eval.erl:255: anonymous fn/2 in :erl_eval.expr/5\n",
         "    (stdlib) lists.erl:1263: :lists.foldl/3\n",
         "キーを加えるときはMap.put/3関数をお使いください。\n",
-        "iex> map = %{:a => 1, 2 => :b}\n",
+        "!elixir -e 'IO.inspect map = %{:a => 1, 2 => :b}\n",
         "%{2 => :b, :a => 1}\n",
-        "iex> Map.put(map, :c, 3)\n",
+        "!elixir -e 'IO.inspect Map.put(map, :c, 3)\n",
         "%{2 => :b, :a => 1, :c => 3}\n",
         "キーが重複したときは、あとの値で上書きされます。\n",
-        "iex> %{:a => 1, 2 => :b, :a => :one}\n",
+        "!elixir -e 'IO.inspect %{:a => 1, 2 => :b, :a => :one}\n",
         "%{2 => :b, :a => :one}\n",
         "マップの中のキーがすべてアトムの場合は、つぎのように出力されます。\n",
-        "iex> %{:a => 1, :b => 2}\n",
+        "!elixir -e 'IO.inspect %{:a => 1, :b => 2}\n",
         "%{a: 1, b: 2}\n",
         "そして、この簡略な構文は、マップをつくるときにも使えるのです。また、アトムのキーはドット.でも参照できます。\n",
         "ie> map = %{:a => 1, 2 => :b}\n",
         "%{2 => :b, :a => 1}\n",
-        "iex> map.a\n",
+        "!elixir -e 'IO.inspect map.a\n",
         "1\n",
-        "iex> map.2\n",
+        "!elixir -e 'IO.inspect map.2\n",
         "** (SyntaxError) iex:15: syntax error before: \"2\"\n",
-        "iex> map[2]\n",
+        "!elixir -e 'IO.inspect map[2]\n",
         ":b\n",
-        "iex> map.c\n",
+        "!elixir -e 'IO.inspect map.c\n",
         "** (KeyError) key :c not found in: %{2 => :b, :a => 1}\n",
         "Elixirの開発者にはMapモジュールの関数より、map.fieldの構文とパターンマッチングでマップを扱う方が好まれるようです。はっきりとわかりやすいスタイルでプログラミングができるからでしょう(「Writing assertive code with Elixir」参照)。\n",
         "\n",
         "入れ子のデータ構造\n",
         "マップやキーワードリストは、それぞれ入れ子にできます。また、マップとキーワードリストを互いに入れ子にすることも可能です。値はそれぞれの構文を組み合わせて得られます。\n",
-        "iex> users = [\n",
+        "!elixir -e 'IO.inspect users = [\n",
         "...>   john: %{name: \"John\", age: 27, languages: [\"Erlang\", \"Ruby\", \"Elixir\"]},\n",
         "...>   mary: %{name: \"Mary\", age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"]}\n",
         "...> ]\n",
@@ -2622,27 +2665,27 @@
         "  john: %{age: 27, languages: [\"Erlang\", \"Ruby\", \"Elixir\"], name: \"John\"},\n",
         "  mary: %{age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"], name: \"Mary\"}\n",
         "]\n",
-        "iex> users[:mary]\n",
+        "!elixir -e 'IO.inspect users[:mary]\n",
         "%{age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"], name: \"Mary\"}\n",
-        "iex> users[:john].age\n",
+        "!elixir -e 'IO.inspect users[:john].age\n",
         "27\n",
         "値を書き替えるにはput_in/2を用います。\n",
-        "iex> users = put_in(users[:john].age, 31)\n",
+        "!elixir -e 'IO.inspect users = put_in(users[:john].age, 31)\n",
         "[\n",
         "  john: %{age: 31, languages: [\"Erlang\", \"Ruby\", \"Elixir\"], name: \"John\"},\n",
         "  mary: %{age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"], name: \"Mary\"}\n",
         "]\n",
-        "iex> users[:john].age\n",
+        "!elixir -e 'IO.inspect users[:john].age\n",
         "31\n",
         "update_in/2マクロは、第1引数の値を第2引に数渡した関数で処理します。\n",
-        "iex> users = update_in(users[:mary].languages, fn languages ->\n",
+        "!elixir -e 'IO.inspect users = update_in(users[:mary].languages, fn languages ->\n",
         "...>   List.delete(languages, \"Clojure\")\n",
         "...> end)\n",
         "[\n",
         "  john: %{age: 31, languages: [\"Erlang\", \"Ruby\", \"Elixir\"], name: \"John\"},\n",
         "  mary: %{age: 29, languages: [\"Elixir\", \"F#\"], name: \"Mary\"}\n",
         "]\n",
-        "iex> users[:mary].languages\n",
+        "!elixir -e 'IO.inspect users[:mary].languages\n",
         "[\"Elixir\", \"F#\"]\n",
         "get_and_update_in/2\n",
         "put_in/3\n",
